--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 const username = document.getElementById('username').value;
                 const password = document.getElementById('password').value;
 
-                fetch('http://localhost:3000/api/login', {
+                fetch('https://my-first-website-backend.onrender.com/api/login', {
                     method : 'POST', 
                     headers : { 'Content-Type' : 'application/json' },
                     body : JSON.stringify({ username, password })
@@ -66,7 +66,7 @@
 
 
             function getSecret() {
-                fetch('http://localhost:3000/api/secret', {
+                fetch('https://my-first-website-backend.onrender.com/api/secret', {
                     method : 'GET', 
                     headers : { 'Authorization' : `Bearer ${token}` }
                 })
@@ -77,7 +77,7 @@
             }
 
             function getMessage() {
-                fetch('http://localhost:3000/api/message')
+                fetch('https://my-first-website-backend.onrender.com/api/message')
                     .then(response => response.json())
                     .then(data => {
                         document.getElementById('output').innerText = data.message;
@@ -85,7 +85,7 @@
             }
 
             function sendEcho() {
-                fetch('http://localhost:3000/api/echo', {
+                fetch('https://my-first-website-backend.onrender.com/api/echo', {
                     method: 'POST', 
                     headers: { 'Content-Type' : 'application/json' }, 
                     body: JSON.stringify({ text: 'Hello Server from the Front End!'})
